Added main entities config files & generated the corresponding classes via doctrine command line.
There is a test in the CoreController.php in the indexAction() method that will scrape a page, parse the results and insert the data into the database (in the status table).

Also generated a sample CRUD controller for 2 tables : status & content.

@todo : make these CRUD controllers models (new namespace?)

--- a/Symfony/src/Stc/ScraperBundle/Resources/views/Default/index.html.twig
+++ b/Symfony/src/Stc/ScraperBundle/Resources/views/Default/index.html.twig
@@ -29,8 +29,8 @@
         </div><!-- /.navbar-collapse -->
     </nav>
     <div class="jumbotron">
-        <h1>Bootstrap 3.0.v. RC2 Glossy UI Kit</h1>
-        <p>This is .jumbotron header Some text...</p>
+        <h1>Srape-a-licous Kit</h1>
+        <p>Just scraping by...</p>
     </div>
 
     <div class="row">
